{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 21,
  "lineage": "fb60d660-1d72-79ab-1233-90c9ff5c7af7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:internet-gateway/igw-09bbf3c1f7b7c9389",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-086679e0951ac811b"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "igw-09bbf3c1f7b7c9389",
            "internet_gateway_id": "igw-09bbf3c1f7b7c9389",
            "owner_id": "236360011328",
            "tags": {
              "Name": "igw-helix"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "helix-subnet-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0ceaff477b961a6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-public-1a"
                ]
              }
            ],
            "id": "subnet-0ceaff477b961a6e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-public-1a",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-039efffe06617aea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-private-1a"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "subnet-039efffe06617aea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-private-1a",
              "Private": "True"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-09d08084fc598617d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-private-1b"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "subnet-09d08084fc598617d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-private-1b",
              "Private": "True"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0b1dac0e12baac076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-private-1c"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "subnet-0b1dac0e12baac076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-private-1c",
              "Private": "True"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0ceaff477b961a6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-public-1a"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "subnet-0ceaff477b961a6e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-public-1a",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0754252a77f7d9f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-public-1b"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "subnet-0754252a77f7d9f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-public-1b",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-07dc43ea3070ed1f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "95.10.5.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "helix-subnet-public-1c"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-086679e0951ac811b"
                ]
              }
            ],
            "id": "subnet-07dc43ea3070ed1f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "helix-subnet-public-1c",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "info-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:vpc/vpc-086679e0951ac811b",
            "cidr_block": "95.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e5f36a9a2b476beb",
                "cidr_block": "95.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e070d5fa87abef31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vpc-helix"
                ]
              }
            ],
            "id": "vpc-086679e0951ac811b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c32219c1534e9bd",
            "owner_id": "236360011328",
            "tags": {
              "Name": "vpc-helix"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-helix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:internet-gateway/igw-09bbf3c1f7b7c9389",
            "id": "igw-09bbf3c1f7b7c9389",
            "owner_id": "236360011328",
            "tags": {
              "Name": "igw-helix"
            },
            "tags_all": {
              "Name": "igw-helix"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "helix-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:route-table/rtb-03fe19ca6adf11bed",
            "id": "rtb-03fe19ca6adf11bed",
            "owner_id": "236360011328",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "helix-rt-private"
            },
            "tags_all": {
              "Name": "helix-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "helix-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:route-table/rtb-0905a1f510c1ae6dc",
            "id": "rtb-0905a1f510c1ae6dc",
            "owner_id": "236360011328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bbf3c1f7b7c9389",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "helix-rt-public"
            },
            "tags_all": {
              "Name": "helix-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.igw_vpc",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assocciation-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dade1aa07dbe6e1",
            "route_table_id": "rtb-03fe19ca6adf11bed",
            "subnet_id": "subnet-039efffe06617aea1"
          },
          "dependencies": [
            "aws_route_table.helix-rt-private",
            "data.aws_subnet.private-subnet-1a",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assocciation-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be85d0c6612f109c",
            "route_table_id": "rtb-03fe19ca6adf11bed",
            "subnet_id": "subnet-09d08084fc598617d"
          },
          "dependencies": [
            "aws_route_table.helix-rt-private",
            "data.aws_subnet.private-subnet-1b",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assocciation-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024412926dc4246b7",
            "route_table_id": "rtb-03fe19ca6adf11bed",
            "subnet_id": "subnet-0b1dac0e12baac076"
          },
          "dependencies": [
            "aws_route_table.helix-rt-private",
            "data.aws_subnet.private-subnet-1c",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assocciation-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080ca7491646b6ab6",
            "route_table_id": "rtb-0905a1f510c1ae6dc",
            "subnet_id": "subnet-0ceaff477b961a6e6"
          },
          "dependencies": [
            "aws_route_table.helix-rt-public",
            "data.aws_internet_gateway.igw_vpc",
            "data.aws_subnet.public-subnet-1a",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assocciation-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0976388029f678509",
            "route_table_id": "rtb-0905a1f510c1ae6dc",
            "subnet_id": "subnet-0754252a77f7d9f44"
          },
          "dependencies": [
            "aws_route_table.helix-rt-public",
            "data.aws_internet_gateway.igw_vpc",
            "data.aws_subnet.public-subnet-1b",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assocciation-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a4280479133c9a0",
            "route_table_id": "rtb-0905a1f510c1ae6dc",
            "subnet_id": "subnet-07dc43ea3070ed1f2"
          },
          "dependencies": [
            "aws_route_table.helix-rt-public",
            "data.aws_internet_gateway.igw_vpc",
            "data.aws_subnet.public-subnet-1c",
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "helix-sg-SSH-RDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:security-group/sg-04d7d2f2cc1f60be7",
            "description": "Grupo de seguridad para la conexion via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico saliente",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d7d2f2cc1f60be7",
            "ingress": [
              {
                "cidr_blocks": [
                  "186.29.64.81/32"
                ],
                "description": "ETB (Apartamento)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "186.29.64.81/32"
                ],
                "description": "ETB (Apartamento)",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "helix-sg-SSH-RDP",
            "name_prefix": "",
            "owner_id": "236360011328",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "helix-sg-SSH-RDP"
            },
            "tags_all": {
              "name": "helix-sg-SSH-RDP"
            },
            "timeouts": null,
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "helix-sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:security-group/sg-0e875967f96a784ff",
            "description": "Grupo de seguridad para la conexion hacia DBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico saliente",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e875967f96a784ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "186.29.64.81/32"
                ],
                "description": "ETB (Apartamento)",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [
                  "186.29.64.81/32"
                ],
                "description": "ETB (Apartamento)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "186.29.64.81/32"
                ],
                "description": "ETB (Apartamento)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "helix-sg-DB",
            "name_prefix": "",
            "owner_id": "236360011328",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "helix-sg-DB"
            },
            "tags_all": {
              "name": "helix-sg-DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "helix-sg-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:security-group/sg-0d4d531242ff9664a",
            "description": "Grupo de seguridad para la conexion hacia INTERNET",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico saliente",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4d531242ff9664a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico entrante",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico entrante",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "helix-sg-internet",
            "name_prefix": "",
            "owner_id": "236360011328",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "helix-sg-internet"
            },
            "tags_all": {
              "name": "helix-sg-internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.info-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-039efffe06617aea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "95.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039efffe06617aea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helix-subnet-private-1a",
              "Private": "True"
            },
            "tags_all": {
              "Name": "helix-subnet-private-1a",
              "Private": "True"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        },
        {
          "index_key": "subnet_1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-09d08084fc598617d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "95.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d08084fc598617d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helix-subnet-private-1b",
              "Private": "True"
            },
            "tags_all": {
              "Name": "helix-subnet-private-1b",
              "Private": "True"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        },
        {
          "index_key": "subnet_1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0b1dac0e12baac076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "95.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1dac0e12baac076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helix-subnet-private-1c",
              "Private": "True"
            },
            "tags_all": {
              "Name": "helix-subnet-private-1c",
              "Private": "True"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0ceaff477b961a6e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "95.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceaff477b961a6e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helix-subnet-public-1a",
              "Private": "false"
            },
            "tags_all": {
              "Name": "helix-subnet-public-1a",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        },
        {
          "index_key": "subnet_1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-0754252a77f7d9f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "95.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0754252a77f7d9f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helix-subnet-public-1b",
              "Private": "false"
            },
            "tags_all": {
              "Name": "helix-subnet-public-1b",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        },
        {
          "index_key": "subnet_1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:subnet/subnet-07dc43ea3070ed1f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "95.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dc43ea3070ed1f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236360011328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "helix-subnet-public-1c",
              "Private": "false"
            },
            "tags_all": {
              "Name": "helix-subnet-public-1c",
              "Private": "false"
            },
            "vpc_id": "vpc-086679e0951ac811b"
          },
          "dependencies": [
            "aws_vpc.vpc-helix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-helix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236360011328:vpc/vpc-086679e0951ac811b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "95.10.0.0/16",
            "default_network_acl_id": "acl-0afd591876e042e33",
            "default_route_table_id": "rtb-08c32219c1534e9bd",
            "default_security_group_id": "sg-0f934e63dab94ba9d",
            "dhcp_options_id": "dopt-0e070d5fa87abef31",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086679e0951ac811b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c32219c1534e9bd",
            "owner_id": "236360011328",
            "tags": {
              "Name": "vpc-helix"
            },
            "tags_all": {
              "Name": "vpc-helix"
            }
          }
        }
      ]
    }
  ]
}